--- a/template.html
+++ b/template.html
@@ -4,15 +4,18 @@
 <head>
     <!--
         Course: CIS133DA
-        Section: #
-        Lesson: 
+        Section: # 10560
+        Lesson: 10
     -->
-    <title>Template</title>
+    <title>Our Services</title>
     <meta charset="UTF-8">
-    <meta name="author" content="">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <link rel="stylesheet" href="css/default_style.css">
+    <meta name="author" content="Payeton Ross">
+    <meta name="description" content="Computer repair services to fit both individual users and businesses, from cloud backup to basic repairs to consultations.">
+    <meta name="keywords" content="computer, repairs, services, cloud, backup, consultation">
+    <link rel="stylesheet" media="(min-width:900px)" href="css/default_style.css">
+    <link rel="stylesheet" media="(max-width:450px)" href="css/mobile_style.css">
+    <link rel="stylesheet" media="(max-width:900px)" href="css/tablet_style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
