--- a/template.html
+++ b/template.html
@@ -7,11 +7,11 @@
         Section: # 10560
         Lesson: 10
     -->
-    <title>Our Services</title>
+    <title>Template</title>
     <meta charset="UTF-8">
     <meta name="author" content="Payeton Ross">
-    <meta name="description" content="Computer repair services to fit both individual users and businesses, from cloud backup to basic repairs to consultations.">
-    <meta name="keywords" content="computer, repairs, services, cloud, backup, consultation">
+    <meta name="description" content="">
+    <meta name="keywords" content="">
     <link rel="stylesheet" media="(min-width:900px)" href="css/default_style.css">
     <link rel="stylesheet" media="(max-width:450px)" href="css/mobile_style.css">
     <link rel="stylesheet" media="(max-width:900px)" href="css/tablet_style.css">
