Completed final review and updates before submission.

--- a/services.html
+++ b/services.html
@@ -14,7 +14,8 @@
     <meta name="keywords" content="computer, repairs, services, cloud, backup, consultation">
     <link rel="stylesheet" media="(min-width:900px)" href="css/default_style.css">
     <link rel="stylesheet" media="(max-width:450px)" href="css/mobile_style.css">
-    <link rel="stylesheet" media="(max-width:900px)" href="css/tablet_style.css">
+    <link rel="stylesheet" media="(max-width:900px) and (min-width:
+    450px)" href="css/tablet_style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
